--- a/index.html
+++ b/index.html
@@ -6,62 +6,162 @@
 <title>Ahmet Tanriverdi</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 <style>
-:root{--bg:#0b0b0b;--card:rgba(255,255,255,0.06);--accent:#ff4757}
-*{box-sizing:border-box}
-html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;overflow-x:hidden}
-body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-content:center;padding:24px}
+:root{
+  --bg:#0b0b0b;
+  --card:rgba(255,255,255,0.06);
+  --accent:#ff4757;
+}
+*{box-sizing:border-box;margin:0;padding:0}
+html,body{
+  height:100%;
+  font-family:'Inter',system-ui;
+  overflow-x:hidden;
+  background:var(--bg);
+  color:#fff;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  padding:24px;
+}
 
 /* Arka plan */
-.bg-img{position: fixed; inset:0; width:100%; height:100%; background-size: cover; background-position:center; z-index:0; animation:moveBG 20s linear infinite;}
-@keyframes moveBG{0%{transform:scale(1) translate(0,0)}25%{transform:scale(1.05) translate(-10px,10px)}50%{transform:scale(1.05) translate(10px,-10px)}75%{transform:scale(1.05) translate(-10px,-10px)}100%{transform:scale(1) translate(0,0)}}
+.bg-img{
+  position:fixed;
+  inset:0;
+  background:url('assets/ahmet2.png') center/cover no-repeat;
+  z-index:0;
+  animation:moveBG 20s ease-in-out infinite alternate;
+}
+@keyframes moveBG{
+  0%{transform:scale(1) translate(0,0)}
+  25%{transform:scale(1.03) translate(10px,-5px)}
+  50%{transform:scale(1.05) translate(-10px,10px)}
+  75%{transform:scale(1.03) translate(5px,10px)}
+  100%{transform:scale(1) translate(0,0)}
+}
 
 /* Blur overlay */
-#blurOverlay{position:fixed; inset:0; background: rgba(0,0,0,0.7); backdrop-filter: blur(8px); z-index:20; display:flex; align-items:center; justify-content:center; font-size:24px; font-weight:700; color:#fff; cursor:pointer; text-align:center; transition: opacity 1.5s ease;}
+#blurOverlay{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,0.7);
+  backdrop-filter:blur(8px);
+  z-index:20;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:24px;
+  font-weight:700;
+  color:#fff;
+  cursor:pointer;
+  text-align:center;
+  transition:opacity 1.5s ease;
+  -webkit-tap-highlight-color: transparent;
+}
 
-/* İçerik */
-.wrap{width:100%; max-width:760px; border-radius:18px; overflow:hidden; position:relative; background:rgba(255,255,255,0.05); box-shadow:0 6px 30px rgba(0,0,0,0.6); backdrop-filter: blur(8px);}
-.hero{position:relative; padding:28px 22px 18px 22px; display:grid; grid-template-columns:96px 1fr; gap:18px; align-items:center; animation:fadeUp 1s ease forwards; opacity:0; transform:translateY(20px);}
+/* Ana içerik */
+.wrap{
+  width:100%;
+  max-width:760px;
+  border-radius:18px;
+  overflow:hidden;
+  position:relative;
+  background:rgba(0,0,0,0.35);
+  backdrop-filter:blur(6px);
+  box-shadow:0 6px 30px rgba(0,0,0,0.6);
+  z-index:5;
+}
+.hero{
+  padding:28px 22px 18px;
+  display:grid;
+  grid-template-columns:96px 1fr;
+  gap:18px;
+  align-items:center;
+  animation:fadeUp 1s ease forwards;
+  opacity:0;
+  transform:translateY(20px);
+}
 @keyframes fadeUp{to{opacity:1;transform:translateY(0)}}
-.avatar{width:96px;height:96px;border-radius:50%;background-size:cover;background-position:center;border:3px solid rgba(255,255,255,0.06);}
-.title{font-weight:800;font-size:22px;margin:0}
-.sub{font-size:14px;color:#800000;margin-top:6px} /* Rozetler bordo */
-.controls{display:flex; flex-direction:column; gap:6px; align-items:flex-start; margin-top:10px;}
-.controls .small{font-size:13px;color:#001f6b;font-weight:600;} /* Mari yazısı lacivert */
+.avatar{
+  width:96px;height:96px;
+  border-radius:50%;
+  background:url('assets/ahmet.png') center/cover;
+  border:3px solid rgba(255,255,255,0.06);
+}
+.title{font-weight:800;font-size:22px}
+.sub{font-size:14px;color:rgba(255,255,255,0.7);margin-top:6px}
+.controls{margin-top:10px}
+.small{font-size:13px;color:#1e3a8a;font-weight:600}
+.links{display:flex;flex-direction:column;padding:18px;border-top:1px solid rgba(255,255,255,0.05)}
+.link{
+  text-decoration:none;
+  padding:14px 16px;
+  border-radius:12px;
+  margin:8px 0;
+  background:var(--card);
+  color:#fff;
+  font-weight:600;
+  display:flex;
+  align-items:center;
+  gap:10px;
+  transition:transform .2s,background .2s
+}
+.link:hover{transform:scale(1.03);background:rgba(255,255,255,0.1)}
 
-/* Linkler */
-.links{display:flex; flex-direction:column; padding:18px; border-top:1px solid rgba(255,255,255,0.03);}
-.link{display:flex; align-items:center; gap:10px; text-decoration:none; padding:14px 16px; border-radius:12px; margin:8px 0; background:var(--card); color:#fff; font-weight:600; transition:transform 0.2s, background 0.2s;}
-.link:hover{transform:scale(1.03);background:rgba(255,255,255,0.1);}
-.link img{width:22px;height:22px;}
-
-/* Alt yazı */
-.footer-text{font-size:13px;color:#FFD700;font-weight:600;} /* Gold */
+/* Rozetler */
+.sub strong{color:#800000}
 
 /* Ses kontrol */
-#audioControl{position:fixed; top:20px; left:20px; display:flex; align-items:center; gap:8px; background: rgba(0,0,0,0.4); padding:6px 10px; border-radius:12px; cursor:pointer; z-index:10;}
-#volumeSlider{width:0; transition: width 0.3s ease;}
-#audioControl:hover #volumeSlider{width:100px;}
-#volumeIcon{width:24px;height:24px;}
+#audioControl{
+  position:fixed;
+  top:20px;left:20px;
+  display:flex;
+  align-items:center;
+  gap:8px;
+  background:rgba(0,0,0,0.4);
+  padding:6px 10px;
+  border-radius:12px;
+  cursor:pointer;
+  z-index:10;
+}
+#volumeSlider{width:0;transition:width .3s ease}
+#audioControl:hover #volumeSlider{width:100px}
+#volumeIcon{width:24px;height:24px}
 
-/* Ziyaretçi sayacı */
-.visitor-counter{position:fixed; bottom:10px; right:15px; backdrop-filter: blur(6px); background: rgba(0,0,0,0.4); color: gold; padding:6px 12px; border-radius:12px; display:flex; align-items:center; font-family:'Inter',sans-serif; font-size:15px; gap:6px; z-index:9999;}
-.eye-icon{width:20px;height:20px;}
+/* Sayaç kutusu */
+#visitorBox{
+  position:fixed;
+  top:20px;right:20px;
+  background:rgba(0,0,0,0.45);
+  backdrop-filter:blur(6px);
+  border-radius:12px;
+  padding:6px 10px;
+  display:flex;
+  align-items:center;
+  gap:6px;
+  z-index:10;
+  font-size:14px;
+  color:#fff;
+}
+#visitorBox img{width:18px;height:18px;opacity:.9}
+
+footer{text-align:center;padding:18px;font-size:13px;color:#FFD700}
 </style>
 </head>
 <body>
-<!-- Arka plan -->
-<div id="bg" class="bg-img" style="background-image:url('assets/ahmet2.png')"></div>
+<div class="bg-img"></div>
 
-<!-- Blur overlay -->
 <div id="blurOverlay">Ekrana tıkla, Paşam</div>
 
 <div class="wrap">
   <div class="hero">
-    <div class="avatar" id="avatar" style="background-image:url('assets/ahmet.png')"></div>
+    <div class="avatar"></div>
     <div>
-      <h1 class="title" id="name">Ahmet Tanriverdi</h1>
-      <div class="sub" id="desc">
-        LOL: 102 saat / Roblox: 207 saat / Counter: 267 saat
+      <h1 class="title">Ahmet Tanriverdi</h1>
+      <div class="sub">
+        <strong>LOL:</strong> 102 saat / 
+        <strong>Roblox:</strong> 207 saat / 
+        <strong>Counter:</strong> 267 saat
       </div>
       <div class="controls">
         <span class="small">Ben olabilirmisin, Mari??</span>
@@ -69,74 +169,67 @@ body{background:var(--bg);color:#fff;display:flex;align-items:center;justify-con
     </div>
   </div>
 
-  <div class="links" id="links">
-    <a class="link" href="https://instagram.com/ahmet.tanriverdiii" target="_blank">
-      <img src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new.png"/> ahmet.tanriverdiii
+  <div class="links">
+    <a class="link" href="https://www.instagram.com/ahmet.tanriverdiii" target="_blank">
+      <img src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png"/> ahmet.tanriverdiii
     </a>
-    <a class="link" href="https://instagram.com/ahmet.tn7" target="_blank">
-      <img src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new.png"/> ahmet.tn7
+    <a class="link" href="https://www.instagram.com/ahmet.tn7" target="_blank">
+      <img src="https://img.icons8.com/ios-glyphs/30/ffffff/instagram-new.png"/> ahmet.tn7
     </a>
     <a class="link" href="https://x.com/AhmetUt65114282" target="_blank">
-      <img src="https://img.icons8.com/ios-filled/50/ffffff/twitterx.png"/> couple06
+      <img src="https://img.icons8.com/ios-glyphs/30/ffffff/twitterx.png"/> couple06
     </a>
     <a class="link" href="https://open.spotify.com/user/3ctawmw87ddsl1kj74agvldaa" target="_blank">
-      <img src="https://img.icons8.com/ios-filled/50/ffffff/spotify.png"/> Spotify
+      <img src="https://img.icons8.com/ios-glyphs/30/ffffff/spotify.png"/> Spotify
     </a>
   </div>
 
-  <div style="padding:18px;text-align:center">
-    <div class="footer-text">© 2025 — Ahmet Tanriverdi</div>
-  </div>
+  <footer>© 2025 — <span style="color:#FFD700;">Ahmet Tanriverdi</span></footer>
 
-  <!-- Müzik -->
   <audio id="player" src="assets/amo-aller-amos.mp3" preload="auto" loop></audio>
 </div>
 
-<!-- Ses kontrol -->
 <div id="audioControl">
   <img src="https://img.icons8.com/ios-glyphs/30/ffffff/speaker.png" id="volumeIcon"/>
   <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="1">
 </div>
 
-<!-- Ziyaretçi sayacı -->
-<div class="visitor-counter">
-  <svg class="eye-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="gold">
-    <path d="M12 5c-7.633 0-12 7-12 7s4.367 7 12 7 12-7 12-7-4.367-7-12-7zm0 12c-2.761 0-5-2.239-5-5s2.239-5 5-5 5 2.239 5 5-2.239 5-5 5z"/>
-    <circle cx="12" cy="12" r="2.5"/>
-  </svg>
-  <span id="visitCount">100</span>
+<div id="visitorBox">
+  <img src="https://img.icons8.com/ios-glyphs/30/ffffff/visible.png"/>
+  <span id="visitorCount">101</span>
 </div>
 
 <script>
-const player = document.getElementById('player');
-const volumeSlider = document.getElementById('volumeSlider');
-const blurOverlay = document.getElementById('blurOverlay');
-const countEl = document.getElementById("visitCount");
+// Ses kontrol
+const player=document.getElementById('player');
+const volumeSlider=document.getElementById('volumeSlider');
+const blurOverlay=document.getElementById('blurOverlay');
+volumeSlider.addEventListener('input',()=>player.volume=volumeSlider.value);
 
-// Ses slider
-volumeSlider.addEventListener('input', () => { player.volume = volumeSlider.value; });
+// Sayaç
+const visitorCountEl=document.getElementById('visitorCount');
+const hasVisited=localStorage.getItem('visitedAhmet');
+if(!hasVisited){
+  let count=parseInt(localStorage.getItem('visitorCount')||'100');
+  count++;
+  localStorage.setItem('visitorCount',count);
+  visitorCountEl.textContent=count;
+  localStorage.setItem('visitedAhmet','true');
+}else{
+  visitorCountEl.textContent=localStorage.getItem('visitorCount')||'100';
+}
 
-// Blur overlay tıklama
-blurOverlay.addEventListener('click', () => {
+// Blur overlay
+blurOverlay.addEventListener('click',()=>{
   blurOverlay.style.opacity='0';
   setTimeout(()=>{blurOverlay.style.display='none';},1500);
-
-  // Müzik fade-in
-  player.volume = 0;
+  player.volume=0;
   player.play();
-  let vol = 0;
-  const fadeInterval = setInterval(()=>{
-    if(vol<1){ vol+=0.02; if(vol>1) vol=1; player.volume=vol; } 
-    else { clearInterval(fadeInterval); }
+  let v=0;
+  const fade=setInterval(()=>{
+    if(v<1){v+=0.02;player.volume=v;}
+    else clearInterval(fade);
   },30);
-
-  // CountAPI ziyaretçi sayısı
-  fetch("https://api.countapi.xyz/hit/ahmettanriverdi-global/visits")
-    .then(res => res.json())
-    .then(data => { 
-      countEl.innerText = 100 + data.value; 
-    })
-    .catch(err => console.log("Sayaç API hatası:", err));
 });
 </script>
 </body>
